crates/vaab-types/tests/snapshots/errors__a_map_holding_more_than_one_type_of_value.snap
---
source: crates/vaab-types/tests/errors.rs
assertion_line: 474
expression: "errors(\"let mixed = {\\\"a\\\": 1, \\\"b\\\": \\\"two\\\"}\\n\")"
---
[mixed-map] Error: this map's values are not all the same type
   ╭─[ example.vaab:1:27 ]
   │
 1 │ let mixed = {"a": 1, "b": "two"}
   │                   ┬       ──┬──  
   │                   │         ╰──── this value is Text
   │                   │              
   │                   ╰────────────── the first value is Int
   │ 
   │ Help: make every value the same type
───╯
