crates/vaab-types/tests/snapshots/errors__a_match_over_a_maybe_that_misses_the_value.snap
---
source: crates/vaab-types/tests/errors.rs
expression: "errors(\"let ages = {\\\"Ada\\\": 36}\\n\\\n         let message = match ages.get(\\\"Ada\\\") {\\n\\\n         \\x20   when nothing then \\\"not listed\\\"\\n\\\n         }\\n\")"
---
[not-exhaustive] Error: this `match` does not cover `found value`
   ╭─[ example.vaab:2:21 ]
   │
 2 │ let message = match ages.get("Ada") {
   │                     ───────┬───────  
   │                            ╰───────── this is maybe Int, which can also be `found value`
   │ 
   │ Help: add `when found value then ...`, or finish with `otherwise then ...`
   │ 
   │ Note: a `match` has to cover every case, so that adding a variant later cannot slip past
───╯
